master
======

Changes:

maintenance_1.4.x
=================

Changes:
 - obspy.clients.seedlink:
   * avoid unnecessary calls to "get_info()" on waveform requests without
     wildcards (see #3232)

1.4.0 (doi: 10.5281/zenodo.6645832)
===================================

Changes:
 - obspy.core:
   * Minimum supported Python version is now 3.8 (see #3081, #3087)
   * Minimum supported dependency versions are now numpy 1.20, scipy 1.7 and
     matplotlib 3.3 (see #3081, #3087)
   * response: avoid reporting all unkown units (e.g. "RAD/S") to evalresp as
     displacement ("DIS") which with default value for "output" ("VEL") leads
     to evalresp adding a differentiation during response calculation. Instead
     report undefined unit, which makes evalresp use response as is and
     essentially ignoring "output" parameter (see #2945)
   * Improved expanded channel information in string representation of Station,
     e.g. when displaying station in IPython shell (see #3024)
   * limit length of list which records processing info (see #2882)
   * map plots: fix initial map setup, properly pass through user specified
     options, like "projection" etc (see #3191)
 - obspy.clients.fdsn:
   * update URL for NCEDC to https (see #3203)
   * add all valid parameters to get_stations_bulk, e.g. geographical
     constraints (see #3140)
   * do not use autodiscovery of file format in get_stations, unless "format"
     is set to something we do not recognize (see #3138)
   * fix a bug in routing client that made any request made error out when
     "debug=True" was set (see #3214)
   * fix raising FDSNTooManyRequestsException when server rejects request due
     to rate limiting, due to a bug instead a TypeError was raised (see #3219)
 - obspy.clients.seishub:
   * submodule removed completely, since it is outdated and not even test
     servers have been running for years (see #2994)
 - obspy.db:
   * submodule removed completely, since mostly being used in discontinued