@@ -10,6 +10,9 @@ Changes:
  - obspy.clients.seedlink:
    * avoid unnecessary calls to "get_info()" on waveform requests without
      wildcards (see #3232)
+ - obspy.taup:
+   * bugfix to allow calculations for a model with no discontinuities
+     (see #3070)
 
 1.4.0 (doi: 10.5281/zenodo.6645832)
 ===================================
